welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: too many arguments for method baisseBrosse: ()Unit
		baisseBrosse(c.Color);
                            ^Array1:17: error: too many arguments for method leveBrosse: ()Unit
		leveBrosse(c.Color);
                          ^